# MapReduce

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  scope.md
examples/: CMakeLists.txt
examples/grepper/: CMakeLists.txt  main.cpp
examples/grepper/dummyfiles/: file1.txt  file4.txt
examples/invertedIndex/: CMakeLists.txt  main.cpp
examples/invertedIndex/exampleInput/: file2.txt  file3.txt  file4.txt
examples/testexample/: CMakeLists.txt  main.cpp
examples/wordcount/: CMakeLists.txt  main.cpp
examples/wordcount/dummyfiles/: file1.txt  file2.txt  file3.txt
mapreduce/: CMakeLists.txt
mapreduce/include/mapreduce/: combiner.hpp  job.hpp  map.hpp  mapreduce.hpp  reduce.hpp  specification.hpp
mapreduce/include/mapreduce/datasource/: datasource.hpp  directory_source.hpp
mapreduce/include/mapreduce/storage/: in_memory.hpp  storage.hpp
